# cocapn-oneiros

./: AGENT.md  README.md  pyproject.toml
memory/: JOURNAL.md
src/cocapn_oneiros/: __init__.py
tests/: test_cocapn_oneiros.py
