[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-oneiros"
version = "0.2.0"
description = "Dream-state agent orchestration — subconscious pattern matching and creative synthesis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Cocapn"}]
keywords = ["cocapn", "fleet", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/cocapn-oneiros"

[tool.setuptools.packages.find]
where = ["src"]
